--- a/project_prototype/pubspec.yaml
+++ b/project_prototype/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.22.0
   cloud_firestore: ^4.13.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
