--- a/money_minder/pubspec.yaml
+++ b/money_minder/pubspec.yaml
@@ -40,9 +40,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-#  firebase_core: ^2.22.0
-#  cloud_firestore: ^4.13.0
   http: ^1.1.0
+
+  #firebase dependencies
+  firebase_core: ^2.23.0
+  cloud_firestore: ^4.13.2
+  firebase_auth: ^4.0.0
+#  timer: ^2.0.2
 
 
 dev_dependencies:
