--- a/money_minder/pubspec.yaml
+++ b/money_minder/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   timezone: ^0.9.2 # Use the latest version available
 #  flutter_local_notifications: ^16.1.0 # use the latest version
   intl: ^0.17.0 # Check for the latest version
+  fl_chart: 0.64.0
+  percent_indicator: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
