--- a/money_minder/pubspec.yaml
+++ b/money_minder/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
 #  firebase_core: ^2.22.0
 #  cloud_firestore: ^4.13.0
   http: ^1.1.0
+  flutter_date_pickers: ^0.4.2
+  syncfusion_flutter_datepicker: ^21.2.6
 
 
 dev_dependencies:
