--- a/money_minder/pubspec.yaml
+++ b/money_minder/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   path_provider: ^2.0.5
   timezone: ^0.9.2 # Use the latest version available
 #  flutter_local_notifications: ^16.1.0 # use the latest version
-  intl: ^0.17.0 # Check for the latest version
+  intl: ^0.18.1 # Check for the latest version
   fl_chart: 0.64.0
   percent_indicator: ^4.0.1
 
@@ -47,6 +47,9 @@ dependencies:
   http: ^1.1.0
   flutter_date_pickers: ^0.4.2
   syncfusion_flutter_datepicker: ^21.2.6
+  firebase_core: ^2.23.0
+  cloud_firestore: ^4.13.2
+  firebase_auth: ^4.0.0
 
 
 dev_dependencies:
