--- a/money_minder/android/app/build.gradle
+++ b/money_minder/android/app/build.gradle
@@ -27,6 +27,7 @@ android {
     namespace "com.example.money_minder"
     compileSdkVersion 33
     ndkVersion flutter.ndkVersion
+    compileSdkVersion 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
