--- a/money_minder/pubspec.yaml
+++ b/money_minder/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   awesome_notifications: ^0.7.4+1
+  package_info: ^2.0.2
 #  firebase_core: ^2.22.0
 #  cloud_firestore: ^4.13.0
   http: ^1.1.0
